<resources>
    <string name="app_name">MacroCounter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name_project">Name Project</string>
    <string name="prompt_user">User</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="_4000_calorias">4000 Calorias</string>
    <string name="_24_octubre_2020">24 Octubre 2020</string>
    <string name="logo_app">logo_app</string>
    <string name="description">Description</string>
    <string name="hidrato">Carbohidratos</string>
    <string name="proteina">Proteina</string>
    <string name="grasa">Grasa</string>
    <string name="add_calorias_today">Añadir calorías para hoy:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_mensaje_recibido">Data Mensaje Recibido</string>
    <string name="data_mensaje_enviado">Data Mensaje Enviado</string>
    <string name="type_a_message">Type a message</string>

</resources>