<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_calorias_today"
        android:textSize="24sp"
        />
    <EditText
        android:id="@+id/txt_edit_node_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/calor_as"
        android:textSize="18sp"
        android:layout_margin="16dp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/button_ok_state"
            android:text="@string/save"
            android:textColor="#FFF"
            app:layout_constraintEnd_toStartOf="@id/gl_endOk"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_startOk"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cancel_state"
            android:textColor="#FFF"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="@id/gl_startCancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_endCancel"

            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_startOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_endOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".45" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_startCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".55"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_endCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>